# keyrock-challenge

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
config/: config.ron
data/protobuf-schemas/: schema.proto
mocks/: binance_mock.json  binance_mock.txt  bitstamp_mock.json  bitstamp_mock.txt
src/: main.rs
src/backend/configuration/: datastructs.rs
src/backend/exchanges/exchange/: binance.rs
src/backend/grpc/: mod.rs
src/backend/grpc/orderbook/: local_summary.rs
src/backend/grpc/server/: orderbook.rs
src/backend/persistence/: store.rs
src/backend/tests/: exchanges.rs
src/configuration/: datastructs.rs  functions.rs  mod.rs  store.rs
src/exceptions/: configuration_read_error.rs  mod.rs  open_stream_error.rs  stream_subscription_error.rs
src/exchanges/: connection.rs  endpoints.rs  mod.rs  models.rs  stream.rs
src/exchanges/data/: binance.rs  binance_data.rs  bitstamp.rs  bitstamp_data.rs  mod.rs  normalized_exchange_data.rs  trait_exchange.rs
src/exchanges/exchange/: bitstamp.rs  mod.rs
src/grpc/orderbook/: level.rs  local_level.rs  local_summary.rs  mod.rs  normalized_exchange_data.rs  summary.rs
src/grpc/server/: mod.rs  orderbook.rs  server.rs
src/grpc_server/: level.rs  mod.rs  summary.rs
src/grpc_server/orderbook/: level.rs  mod.rs  normalized_exchange_data.rs  summary.rs
src/orderbook/: mod.rs  normalized_exchange_data.rs
src/persistence/: store.rs
src/tests/: configuration.rs  exchanges.rs  exchanges_streams.rs  mod.rs
src/tests/common/: mod.rs
web/: .gitignore  ecosystem.config.js  index.js  package-lock.json  package.json  readme.md
web/assets/css/: main.css
web/assets/html/: index.html
web/assets/js/: main.js
