[package]
name = "keyrock-assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
# Configuration files
ron = "0.7.0"
serde = "1.0.131"

# Async/await
tokio = { version = "1.14.0", features = ["full"] }

# Websocket connection to exchange
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"] }
tungstenite = { version = "0.16.0", default-features = false }
futures = "0.3.17"

# gRPC server + protobuf

# Other
lazy_static = "1.4.0"
url = "2.2.2"
serde_json = "1.0.73"
async-trait = "0.1.52"
fast-float = "0.2.0"
