[package]
name = "keyrock-assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
# Configuration files
ron = "0.7.0"
serde = "1.0.132"

# Async/await
tokio = { version = "1.15.0", features = ["full"] }

# Websocket connection to exchange
tokio-tungstenite = { version = "0.16.1", features = ["native-tls"] }
tungstenite = { version = "0.16.0", default-features = false }
futures = "0.3.19"

# Parsing data from the exchanges
serde_json = "1.0.73"

# gRPC server + protobuf
tonic = "0.6.2"
prost = "0.9.0"
tokio-stream = "0.1.8"

# Frontend
#iced = "0.3.0"

# Other
lazy_static = "1.4.0"
url = "2.2.2"
async-trait = "0.1.52"
fast-float = "0.2.0"

[build-dependencies]
tonic-build = "0.6.2"
